Minor CSS fixes: article img, header padding, hero image alignment, margins of feature and article divs.

--- a/style.css
+++ b/style.css
@@ -246,8 +246,11 @@ img .hamburger {
 
 .article img {
    width: 100%;
+   height: 200px;
+   object-fit: cover;
    border-top-left-radius: 0.25em;
    border-top-right-radius: 0.25em;
+   
 }
 
 .article-text {
@@ -297,7 +300,7 @@ footer .logo {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0em 0.8em 0em 0.8em;
+    padding: 0em;
 
 }
 
@@ -332,12 +335,12 @@ footer .invite p {
 @media only screen and (min-width: 600px) {
 
     .wrapper {
-        padding-right: 7em;
-        padding-left: 7em;
+        padding-right: 9em;
+        padding-left: 9em;
     }
 
     .header .logo {
-        padding-left: 7em;
+        padding-left: 9em;
     }
 
     .header .navigation {
@@ -364,12 +367,14 @@ footer .invite p {
     .header {
         width: 100%;
         text-align: left;
+        padding-top: 0.25em;
+        padding-bottom: 0.25em;
 
     }
    
     .header .invite {
         display: inline;
-        padding-right: 7em;
+        padding-right: 9em;
         
     }
  
@@ -377,7 +382,7 @@ footer .invite p {
         width: 38%;
         text-align: left;
         padding-top: 11em;
-        padding-bottom: 8em;
+        padding-bottom: 9.5em;
     }
 
     .intro-text h1 {
@@ -412,7 +417,7 @@ footer .invite p {
         position: absolute;
         z-index: 50;
         right: -450px;
-        top: -190px;
+        top: -180px;
         overflow: hidden;
         display: inline;       
     }
@@ -425,13 +430,13 @@ footer .invite p {
     .test-mockups {
         position: absolute;
         z-index: 100;
-        right: -180px;
-        top: -80px;
+        right: -125px;
+        top: -43px;
         display: inline;
     }
 
     .test-mockups img {
-        clip-path: inset(0% 23.53% 0% 0%);
+        clip-path: inset(0% 0% 0% 0%);
     }
     
     .mockups {
@@ -458,6 +463,7 @@ footer .invite p {
         position: relative;
         z-index: 51;
         width: 100%;
+        padding-top: 0em;
         
     }
 
@@ -465,6 +471,7 @@ footer .invite p {
         padding-bottom: 4.5em;
         padding-top: 4em;
     }
+
     
     .why-easybank-title {
         text-align: left;
@@ -492,22 +499,29 @@ footer .invite p {
     .features {
         text-align: left;
         width: 100%;
-        margin-right: 1.75em;
+        margin-right: 1.5em;
+    }
+
+    .feature4 {
+        margin-right: 0em;
     }
 
     .features h3 {
         font-size: 1.25em;
         font-weight: 300;
+        margin-top: 1.75em;
+        margin-bottom: 1.25em;
     }
 
     .features p {
         font-size: 0.9em;
+        line-height: 1.6em;
     }
 
     .blogposts {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         margin-top: 2.75em;   
     }
 
@@ -517,6 +531,7 @@ footer .invite p {
 
     .blog h2 {
         font-size: 2.1em;
+        text-align: left;
     }
 
     .blog .wrapper {
@@ -527,6 +542,10 @@ footer .invite p {
     .article {
         margin-right: 1.75em;
         width: 100%;
+    }
+
+    .article4 {
+        margin-right: 0em;
     }
 
     .article-text {
@@ -547,8 +566,10 @@ footer .invite p {
     }
 
     .footer-navigation {
-        padding-left: 7em;
+        padding-left: 9.5em;
         flex-grow: 1;
+        text-align: left;
+        
         
     }
     
@@ -569,27 +590,33 @@ footer .invite p {
         flex-direction: row;
         font-size: 1.15em;
         font-weight: 300;
-        flex-grow: 1.5;
+        flex-grow: 2;
         padding-left: 5em;
-        margin-bottom: 0em;
+        margin-bottom: 1.5em;
     }
 
     .site-navigation nav {
         padding-right: 6em;
         text-align: left;
         line-height: 1.75em;
-    
     }
 
-    .social-media li {
-        padding-right: 0.75em;
-        
+    .social-media {
+        display: flex;
+        flex-direction: row;     
+           
+    }
+
+    .social-media img {
+        padding-right: 1em;
+        width: 24px;
+        height: 24px;
     }
 
     .footer-bottom {
         text-align: right;
-        padding-right: 7em;
-        flex-grow: 1.5;
+        padding-right: 9.5em;
+        flex-grow: 1;
     }
 
 
